# agent-trace

./: .gitignore  README.md  pyproject.toml  sample.env
agent_trace/: __init__.py  _runtime.py  context.py  exporter.py  interceptor.py  spans.py  summary.py
agent_trace/adapters/: __init__.py  _stack.py  langchain.py  langgraph.py
docs/: architecture.md  setup.md  testing.md
docs/integrations/: langchain.md  langgraph.md
examples/: groq_agent.py  langchain_react_agent.py  langgraph_react_agent.py  openai_agent.py  react_agent.py  streaming_model.py
scripts/: start_jaeger.ps1
tests/: conftest.py  test_api.py  test_context.py  test_interceptor.py  test_runtime_hardening.py  test_spans.py  test_summary.py  test_threading.py
tests/adapters/: test_langchain_handler.py  test_langgraph.py  test_realworld_execution.py  test_stack.py
