[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trace"
version = "0.1.0"
description = "SDK-agnostic OpenTelemetry tracing for AI agent reasoning chains"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["opentelemetry", "tracing", "llm", "ai-agents", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-semantic-conventions>=0.45b0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
]
dev = [
    "anthropic>=0.26.0",
    "openai>=1.30.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_trace*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
